--- a/aiserver.example.yml
+++ b/aiserver.example.yml
@@ -13,12 +13,12 @@ models:
     n_gpu_layers: -1
     embedding: true
     backend: "llama"
-  - model_path: "models/Stable-diffusion/dreamshaper_8.safetensors"
-    model_name: "dreamshaper-8"
+  - model_name: "dreamshaper-8"
+    model_path: "models/Stable-diffusion/dreamshaper_8.safetensors"
     backend: "stablediffusion"
-  - model_path: "models/audio/whisper-small-ggml.bin"
-    model_name: "whisper-1"
+  - model_name: "whisper-1"
+    model_path: "models/audio/whisper-small-ggml.bin"
     backend: "whisper"
-  - model_path: "models/audio/en_US-amy-medium.onnx"
-    model_name: "tts-1"
+  - model_name: "tts-1;amy"
+    model_path: "models/voices/en_US-amy-medium.onnx"
     backend: "piper"
