--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,5 @@ dependencies = [
     "sse-starlette>=2.2.1",
     "stable-diffusion-cpp-python>=0.2.5",
     "starlette-context>=0.3.6",
+    "pillow>=10.2.0",
 ]
