--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,24 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi[standard]>=0.115.8",
-    "llama-cpp-python>=0.3.7",
-    "onnxruntime-gpu>=1.20.1",
-    "piper-tts>=1.2.0",
     "pydantic-settings>=2.8.0",
-    "pydub>=0.25.1",
     "sse-starlette>=2.2.1",
-    "stable-diffusion-cpp-python>=0.2.5",
     "starlette-context>=0.3.6",
+    "pydub>=0.25.1",
     "pillow>=10.2.0",
+]
+
+[project.optional-dependencies]
+cpu = [
+    "llama-cpp-python>=0.3.7",
+    "piper-tts>=1.2.0",
+    "pywhispercpp>=1.3.0"
+    "stable-diffusion-cpp-python>=0.2.5",
+]
+gpu = [
+    "llama-cpp-python>=0.3.7",
+    "piper-tts>=1.2.0",
+    "pywhispercpp>=1.3.0"
+    "stable-diffusion-cpp-python>=0.2.5",
+    "onnxruntime-gpu>=1.20.1",
 ]
