--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "aiserver"
 version = "0.1.0"
-description = "AI python server. Host your own AI models!"
+description = "AIServer. Host your own AI models!"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
@@ -19,11 +19,4 @@ cpu = [
     "piper-tts>=1.2.0",
     "pywhispercpp>=1.3.0"
     "stable-diffusion-cpp-python>=0.2.5",
-]
-gpu = [
-    "llama-cpp-python>=0.3.7",
-    "piper-tts>=1.2.0",
-    "pywhispercpp>=1.3.0"
-    "stable-diffusion-cpp-python>=0.2.5",
-    "onnxruntime-gpu>=1.20.1",
 ]
