--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,11 @@ dependencies = [
 cpu = [
     "llama-cpp-python>=0.3.7",
     "piper-tts>=1.2.0",
-    "pywhispercpp>=1.3.0"
+    "pywhispercpp>=1.3.0",
     "stable-diffusion-cpp-python>=0.2.5",
+]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
 ]
